--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin version="2">
     <id>com.jaeger.findviewbyme</id>
     <name>FindViewByMe</name>
-    <version>1.3.8</version>
-    <vendor email="chjie.jaeger@gmail.com" url="http://laobie.github.io">Jaeger</vendor>
+    <version>1.3.9</version>
+    <vendor email="loftcat@163.com" url="http://loftcat.github.io">Loftcat</vendor>
 
     <description><![CDATA[
         A plugin for android developer, with the plugin you can generate "findViewById" code quickly.<br>
